tests/testFiles/semanticErrors/logicalandnumbers.meme
ermahgerd b = 10 || 11;
